# guide-warframe

./: .env.local.example  .gitignore  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release-overlay.yml
public/: manifest.webmanifest  sw.js
scripts/: fetch-recipes.mjs  gen-icons.mjs  gen-tauri-icons.mjs  parse-csv.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/api/lich-weapons/: route.ts
src/app/api/market/: route.ts
src/app/api/mastery-items/: route.ts
src/app/api/wf/: route.ts
src/app/bubble/: layout.tsx
src/app/bubble/cycles/: page.tsx
src/app/bubble/missions/: page.tsx
src/app/construction/: page.tsx
src/app/helminth/: page.tsx
src/app/incarnon/: page.tsx
src/app/lich/: page.tsx
src/app/live/: page.tsx
src/app/mastery/: page.tsx
src/app/overlay/: layout.tsx  page.tsx
src/app/settings/: page.tsx
src/app/team/: page.tsx
src/app/today/: page.tsx
src/app/warframes/: page.tsx
src/components/: AppShell.tsx  AuthBar.tsx  BubbleShell.tsx  LichEditModal.tsx  MarketBadge.tsx  MobileNav.tsx  Nav.tsx  NoteButton.tsx  NotificationsManager.tsx  SearchPalette.tsx  SwRegister.tsx
src/data/: construction.json  helminth.json  incarnon.json
src/lib/: auth.tsx  backup.ts  catalog.ts  lich.ts  market.ts  mastery.ts  nightwave-fr.ts  notes.ts  notifications.ts  rotation.ts  search-bus.ts  storage.ts  supabase.ts  wfapi.ts
supabase/: 002_notes.sql  schema.sql
(+2 files in other folders)
