[package]
name = "guide-warframe-overlay"
version = "0.7.0"
description = "Warframe guide overlay (lightweight wrapper around guide-warframe.vercel.app)"
authors = ["kawa34400"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "guide_warframe_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
